<resources>
    <string name="app_name">趣盘</string>
    <string name="account">账户:</string>
    <string name="password">密码:</string>
    <string name="login">登录</string>
    <string name="login_ing">正在登录..</string>
    <string name="registerAction">立即注册</string>
    <string name="getVerificationCode">获取验证码</string>
    <string name="RegetVerificationCode">再次获取</string>
    <string name="account_or_pwd_should_not_be_null">账户或密码不能为空</string>
    <string name="account_or_pwd_is_error">账户或密码错误</string>

    <string name="file_list">文件列表</string>
    <string name="upload_completed_list">已完成</string>
    <string name="upload_list">正在上传</string>
    <string name="loading">加载中...</string>
    <string name="error">网络异常</string>
    <string name="download_file">下载</string>
    <string name="share_file">分享</string>
    <string name="delete_file">删除</string>
    <string name="confirm">确认</string>
    <string name="cancel">取消</string>
    <string name="search">搜索文件..</string>
    <string name="alert">温馨提示</string>
    <string name="file_action_bar_multi_choice_title">%d 个文件已选择</string>
    <string name="confirm_delete">确认删除%d 个文件?</string>

    <string name="index_start_app">开始使用</string>
    <string name="welcome_to_use">欢迎使用Q-PAN</string>
    <string name="register">没有账号？注册一个！</string>
    <string name="welcome_to_register">欢迎注册Q-PAN</string>
    <string name="empty">空空如也..</string>
    <string name="waiting_search">开始搜索更多资源</string>
    <string name="recycle_bin">回收站</string>
    <string name="local_download">本地下载</string>
    <string name="disk_promote">云盘空间提升</string>
    <string name="out">退出当前账号</string>
    <string name="setting">设置</string>
    <string name="mine">个人中心</string>

    <string name="send_verify_code_success">验证码已发送</string>
    <string name="send_verify_code_failed">验证码发送失败，请稍后再试</string>
    <string name="invalid_phone_number">请输入正确的手机号码</string>
    <string name="invalid_verify_code">无效的验证码</string>

</resources>
