<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/file_list_menu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="0dp"
    android:layout_weight="0"
    android:background="@color/menuBackground"
    android:orientation="horizontal"
    android:padding="15dp"
    android:visibility="gone"
   >
    <Button
        android:id="@+id/menu_share_icon"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/share_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/menu_share_icon"
        android:text="@string/share_file"
        android:textColor="@color/menuText"
        android:textSize="13sp" />

    <Button
        android:id="@+id/menu_download_icon"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="80dp"
        android:background="@drawable/download_icon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/menu_download_icon"
        android:text="@string/download_file"
        android:textColor="@color/menuText"
        android:textSize="13sp" />

    <Button
        android:id="@+id/menu_delete_icon"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_toStartOf="@id/menu_delete"
        android:background="@drawable/delete_icon" />

    <TextView
        android:id="@+id/menu_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="3dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="3dp"
        android:text="@string/delete_file"
        android:textColor="@color/menuText"
        android:textSize="13sp" />
</RelativeLayout>
